Fixed: Button-round ball in the middle of header. header made flex.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 
   <body id="body">
     <header>
-      <button onclick="changeColor();">Color</button>
+        <button id="button"  onclick="changeColor();"></button>
     </header>
     <img class="facebook" id="icons" src="images/facebook_icon.png" />
     <img class="youtube" id="icons" src="/images/youtube_icon.png" />
+    
   </body>
 </html>
