--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body id="body">
     <header>
-      <button id="button" onclick="changeColor();"></button>
+      <button id="button" class="ball" onclick="changeColor();"></button>
     </header>
     <section class="social">
       <img class="facebook" id="icons" src="images/facebook_icon.png" />
@@ -36,7 +36,13 @@
     </section>
 
     <main>
-      <div class="myPhotoSection"></div>
+      <div class="figure">
+        <img
+          alt="image of a figure doing pilates"
+          src="https://icon-library.com/images/pilates-icon/pilates-icon-25.jpg"
+        />
+      </div>
+
       <div class="aboutMeSection">
         <h3>I am Maria, a personal trainer working with Pilates</h3>
         <p>
@@ -47,6 +53,10 @@
           laboriosam architecto? Deserunt temporibus, quaerat consequatur
           numquam voluptatum ipsum commodi minima voluptatem quisquam?
         </p>
+        <img
+          alt="image of Maria"
+          src="https://scontent.fath3-3.fna.fbcdn.net/v/t1.6435-9/211708601_10226544569143832_7256582938537242822_n.jpg?_nc_cat=106&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=68lppRLS_C8AX_Qq_0S&_nc_ht=scontent.fath3-3.fna&oh=052f5e9da9779f2f54176f119bc418cf&oe=618CEB63"
+        />
       </div>
     </main>
   </body>
