Fixed: flex positioning of header to space-between

--- a/index.html
+++ b/index.html
@@ -41,15 +41,17 @@
         <li><a id="nav-li1" href="#"> About</a> </li>
         <li><a id="nav-li2" href="#">Contact</a> </li>
       </ul>
+      
       <button
         id="button"
         class="ball"
         onclick="changeColor();"
       ></button>
-      <section class="social">
+  
+      <div class="social">
        <a href="#"> <img   id="social1" src="images/facebook_icon.png" /></a>
         <a href="#"><img  id="social2" src="/images/youtube_icon.png" /></a>
-      </section>
+      </div>
     </header>
     
 
