--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <link rel="stylesheet" href="/css/index.css" />
   <link rel="stylesheet" href="css/header.css">
-  <title>Maria's Pilates</title>
+  <title>Test</title>
 
   <script>
     var colors = [
