finished: flex of all sections (except footer and footer nav menu not created yet)

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <section class="about-me">
 
-      <div class="my-image">
-        <img class="about-me-image" alt="image of Maria" src="images/My picture.jpg">
+      <div class="about-me-image">
+        <img class="my-image" alt="image of Maria" src="images/My picture.jpg">
       </div>
 
       <div class="about-me-side">
@@ -104,7 +104,7 @@
     <div class="my-videos">
       <h2> My favorite exercise videos</h2>
       <div class="my-videos-block">
-        <div>
+        <div class="my-video-item">
 
           <iframe width="550" height="400" src="https://www.youtube.com/embed/aZNVjBajf0g" title="YouTube video player"
             frameborder="0"
@@ -114,7 +114,8 @@
             sequence</span>
           <span id="video-title-1" class="video-creator">by Di Space</span>
         </div>
-        <div>
+
+        <div class="my-video-item">
           <iframe width="550" height="400" src="https://www.youtube.com/embed/g_tea8ZNk5A" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -122,13 +123,15 @@
           <span class="video-title">Daily stretch</span>
           <span class="video-creator">by Mady Morrison</span>
         </div>
-        <div>My video 3</div>
-        <iframe width="550" height="400" src="https://www.youtube.com/embed/uOXCDNi2520" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-        <span class="video-title">Pilates for Lower Back Pain</span>
-        <span class="video-creator">by Katie Mackenzie </span>
+
+        <div class="my-video-item">
+          <iframe width="550" height="400" src="https://www.youtube.com/embed/uOXCDNi2520" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <span class="video-title">Pilates for Lower Back Pain</span>
+          <span class="video-creator">by Katie Mackenzie </span>
+        </div>
       </div>
 
     </div>
