added: animation delay 2s for the ball added: flexbox for about-me section

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
       <section class="about-me">
         <div class="about-me-image">
           <img
-            class="my-image"
-            alt="image of Maria"
-            src="images/My picture.jpg"
+            class="my-image" alt="image of Maria" src="images/My picture.jpg"
           />
         </div>
 
