changed: background color for pink, blue, yellow

--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
     <link rel="stylesheet" href="css/header.css" />
     <title>Maria's Pilates</title>
 
+    
+    <!-- var colors = [
+    "rgba(74, 179, 228, 0.55)",
+    "rgba(247,116,166, 0.55)",
+    "rgba(250, 246, 211, 0.55)",
+  ]; old colors-->
+
+  <!-- var colors = [
+  "rgba(113, 161, 212, 1)",
+  "rgba(252, 195, 191, 1)",
+  "rgb(255, 248, 243, 1)",
+];  new colors-->
+    
     <script>
-      var colors = [
-        "rgba(74, 179, 228, 0.5)",
-        "rgba(247,116,166,0.5)",
-        "rgba(250, 246, 211, 0.55)",
-      ];
+     var colors = [
+     "rgba(113, 161, 212, 0.7)",
+    "rgba(252, 195, 191, 1)",
+    "rgba(255, 246, 200, 1)",
+  ];
       var colorIndex = 0;
       function changeColor() {
         var col = document.getElementById("body");
@@ -105,7 +118,7 @@
               allowfullscreen
             ></iframe>
             <span id="video-title-1" class="video-title"
-              >Beginner Pilates Flow Exercises based on the Original 34
+              >Beginner Pilates Flow <br>Exercises based on the Original 34
               sequence</span
             >
             <span id="video-title-1" class="video-creator">by Di Space</span>
