--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      var colors = [
      "rgba(113, 161, 212, 0.7)",
     "rgba(252, 195, 191, 1)",
-    "rgba(255, 246, 200, 1)",
+    "rgb(255, 248, 243, 1)",
   ];
       var colorIndex = 0;
       function changeColor() {
