--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
 ];  new colors-->
     
     <script>
-     var colors = [
-     "rgba(113, 161, 212, 0.7)",
-    "rgba(252, 195, 191, 0.7)",
-    "rgb(255, 248, 243, 0.7)",
+    "rgba(74, 179, 228, 0.55)",
+    "rgba(247,116,166, 0.55)",
+    "rgba(250, 246, 211, 0.55)",
   ];
       var colorIndex = 0;
       function changeColor() {
