--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 ];  new colors-->
     
     <script>
+      var colors = [
     "rgba(74, 179, 228, 0.55)",
     "rgba(247,116,166, 0.55)",
     "rgba(250, 246, 211, 0.55)",
