added: test in about me section i/o lorem

--- a/index.html
+++ b/index.html
@@ -73,16 +73,12 @@
 
         <div class="about-me-side">
           <div class="about-me-text">
-            <h3>I am Maria, a personal trainer working with Pilates</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
-              modi, est tempore delectus nam et beatae illum corrupti porro
-              quasi asperiores quas, aut ducimus doloribus aliquam quis
-              consequatur molestias necessitatibus eum nemo hic qui! Assumenda,
-              id. Vero, laboriosam architecto? Deserunt temporibus, quaerat
-              consequatur numquam voluptatum ipsum commodi minima voluptatem
-              quisquam?
+            <h3>I am Maria, a pilates instructor focusing on physical therapy through fitness in Athens, Greece</h3>
+            <p>  After finishing my pilates certification, I spent the last decade deepening my understanding of the body, as well as the therapeutic effect of pilates on pain relief and injuries.</p>
+               <p>Being passionate about the field and the results on my clients physical strength, as well as overall wellbeing, I decided to further my studies by obtaining a Bachelor of Science degree in Physiotherapy from Queen Margaret's University of Scottland.  </p>
             </p>
+            <p>These days I teach personal sessions online and in person.</p> 
+            <p>Group classes are also availabe at <a href="https://www.facebook.com/anandayogadance/" target=”_blank”>Ananda</a> studio in Nea Smyrni, and in <a href="" target="_bland">Sososo</a> physiotherapy center in Piraeus</p>
           </div>
         </div>
       </section>
@@ -155,7 +151,7 @@
   </div> -->
   </body>
 
-  <footer>This site is for educational purposes only</footer>
+  <footer>This is a fictional site for educational purposes only</footer>
   <div>
     Icons made by
     <a href="https://www.flaticon.com/authors/ddara" title="dDara">dDara</a>
