changed bck colors to test on mobile

--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
 
   <!-- var colors = [
   "rgba(74, 179, 228, 0.5)",
+  "rgba(113, 161, 212, 1)",
+  "rgba(247,116,166, 0.55)",
   "rgba(252, 195, 191, 1)",
   "rgb(255, 248, 243, 1)",
+  "rgba(250, 246, 211, 0.7)",
 ];  potential colors-->
     
     <script>
       var colors = [
     "rgba(113, 161, 212, 1)",
-    "rgba(247,116,166, 0.55)",
-    "rgba(250, 246, 211, 0.7)",
+    "rgba(252, 195, 191, 1)",
+    "rgb(255, 248, 243, 1)",
   ];
       var colorIndex = 0;
       function changeColor() {
@@ -83,13 +86,13 @@
         </div>
       </section>
 
-      <div class="pilates-system">
+      <!-- <div class="pilates-system">
 
-        <!-- <figure>
+        <figure>
           <img class="img-mat" alt=" image of a figure doing pilates mat exercises"
         src="images/pilates-icons-bck-08-300x300.png" />
           <figcaption style="color: aliceblue;">Your label goes here</figcaption>
-      </figure> -->
+      </figure>
 
       <img class="img-mat" alt=" image of a figure doing pilates mat exercises"
         src="images/pilates-icons-bck-08-300x300.png" />
@@ -103,7 +106,7 @@
       <img class="img-aerial" alt="image of a figure doing aerial pilates"
         src="images/pilates-icons-bck-17-300x300.png" />
 
-    </div>
+    </div> -->
 
       <div class="my-videos" id="my-videos">
         <h2>My favorite exercise videos</h2>
