--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       var colors = [
     "rgba(113, 161, 212, 1)",
     "rgba(252, 195, 191, 1)",
-    "rgba(250, 246, 211, 0.7)",
+    "rgb(255, 248, 243, 1)",
   ];
       var colorIndex = 0;
       function changeColor() {
