removed / from src of youtube icon, caused bug on deploy on github pages

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <div class="social">
         <a href="#"> <img id="social1" src="images/facebook_icon.png" /></a>
-        <a href="#"><img id="social2" src="/images/youtube_icon.png" /></a>
+        <a href="#"><img id="social2" src="images/youtube_icon.png" /></a>
       </div>
     </header>
 
