created: media queries for @1200-600 for my-pilates section

--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
           </div>
         </div>
       </section>
+      
 
+      <h2>My Pilates Classes</h2>
       <div class="pilates-system" id="pilates-system">
-
+     
         <figure class="img-mat">
           <img  alt=" image of a figure doing pilates mat exercises"
         src="images/pilates-icon-mat.png" />
@@ -124,18 +126,6 @@
       src="images/pilates-icon-aerial.png" />
       <figcaption>Aerial Pilates</figcaption>
     </figure>
-
-      <!-- <img class="img-mat" alt=" image of a figure doing pilates mat exercises"
-        src="images/pilates-icons-bck-08-300x300.png" />
-
-      <img class="img-mat-props" alt="image of a figure doing pilates mat exercises with props"
-        src="images/pilates-icon-30.png" />
-
-      <img class="img-reformer" alt="image of a figure doing pilates exercises on reformer equipment "
-        src="images/pilates-icons-bck-26-300x300.png" />
-
-      <img class="img-aerial" alt="image of a figure doing aerial pilates"
-        src="images/pilates-icons-bck-17-300x300.png" /> -->
 
     </div>
 
