testing: remove autoplay from videos

--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <figure class="img-mat">
           <img  alt=" image of a figure doing pilates mat exercises"
         src="images/pilates-icon-mat.png" />
-          <figcaption>Pilates mat</figcaption>
+          <figcaption>Pilates Mat</figcaption>
       </figure>
 
       <figure class="img-mat-props">
-        <figcaption>Pilates props</figcaption>
+        <figcaption>Pilates Props</figcaption>
         <img  alt="image of a figure doing pilates mat exercises with props"
         src="images/pilates-icon-ball.png" />
      </figure>
@@ -138,7 +138,7 @@
               src="https://www.youtube.com/embed/aZNVjBajf0g"
               title="YouTube video player"
               frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
             <span id="video-title-1" class="video-title"
@@ -153,7 +153,7 @@
               src="https://www.youtube.com/embed/g_tea8ZNk5A"
               title="YouTube video player"
               frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
             <span class="video-title">Daily stretch</span>
@@ -165,7 +165,7 @@
               src="https://www.youtube.com/embed/uOXCDNi2520"
               title="YouTube video player"
               frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
             <span class="video-title">Pilates for Lower Back Pain</span>
