muted videos on play & made figcaptions of my pilates visible only on hover

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <div class="my-videos-block">
           
           <div class="my-video-item">
-            <iframe
-              src="https://www.youtube.com/embed/aZNVjBajf0g"
+            <iframe 
+              src="https://www.youtube.com/embed/aZNVjBajf0g?mute=1"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -150,7 +150,7 @@
 
           <div class="my-video-item">
             <iframe
-              src="https://www.youtube.com/embed/g_tea8ZNk5A"
+              src="https://www.youtube.com/embed/g_tea8ZNk5A?mute=1"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -162,10 +162,10 @@
 
           <div class="my-video-item">
             <iframe
-              src="https://www.youtube.com/embed/uOXCDNi2520"
+              src="https://www.youtube.com/embed/uOXCDNi2520?mute=1"
               title="YouTube video player"
               frameborder="0"
-              allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
             ></iframe>
             <span class="video-title">Pilates for Lower Back Pain</span>
