--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   "rgba(113, 161, 212, 1)",
   "rgba(247,116,166, 0.55)",
   "rgba(252, 195, 191, 1)",
+  "rgba(235, 163, 177, 1)"
   "rgb(255, 248, 243, 1)",
   "rgba(250, 246, 211, 0.7)",
 ];  potential colors-->
@@ -27,8 +28,8 @@
 
       var colors = [
     "rgba(113, 161, 212, 1)",
-    "rgba(252, 195, 191, 1)",
-    "rgb(255, 235, 205)",
+    "rgba(225, 142, 150, 1)",
+    "rgba(255, 235, 205, 1)",
   ];
       var colorIndex = 0;
       function changeColor() {
