changed fonts: testing Handlee & Prompt

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&family=Caveat&family=Didact+Gothic&family=Handlee&family=Indie+Flower&family=Manrope&family=Prompt:wght@300;400&family=Quicksand:wght@300;400&family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css"/>
@@ -98,7 +102,7 @@
                <p>Being passionate about the field and the results on my clients physical strength, as well as overall wellbeing, I decided to further my studies by obtaining a Bachelor of Science degree in Physiotherapy from Queen Margaret's University of Scottland.  </p>
             </p>
             <p>These days I teach personal sessions online and in person.</p> 
-            <p>Group classes are also availabe at <a href="https://www.facebook.com/anandayogadance/" target=”_blank”>Ananda</a> studio in Nea Smyrni, and in <a href="https://www.facebook.com/Happy-body-112159400507950/" target="_bland">Happy Body</a> physiotherapy center in Piraeus.</p>
+            <p>Group classes are also availabe at <a href="https://www.facebook.com/anandayogadance/" target=”_blank”>Ananda</a> studio in Nea Smyrni, and in <a href="https://www.facebook.com/Happy-body-112159400507950/" target="_bland">Happy&nbsp;Body</a> physiotherapy center in Piraeus.</p>
           </div>
         </div>
       </section>
