testing: new pink

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   "rgba(113, 161, 212, 1)",
   "rgba(247,116,166, 0.55)",
   "rgba(252, 195, 191, 1)",
-  "rgba(235, 163, 177, 1)"
+  "rgba(235, 163, 177, 1)",
+  "rgba(225, 142, 150, 1)",
   "rgb(255, 248, 243, 1)",
   "rgba(250, 246, 211, 0.7)",
 ];  potential colors-->
@@ -32,7 +33,7 @@
 
       var colors = [
     "rgba(113, 161, 212, 1)",
-    "rgba(225, 142, 150, 1)",
+    "rgba(253, 137, 137, 1)",
     "rgba(255, 235, 205, 1)",
   ];
       var colorIndex = 0;
@@ -190,6 +191,7 @@
   <footer id="footer">
     <a id="contact-fb" href="http://m.me/gaara435" target="_blank"> Message Me on Facebook </a>
       <p>This is a fictional site for educational purposes only</p>
+      <p>Images from http://www.performancepilates.com.au/</p>
     </footer>
   </body>
 
