finalized: to top arrow in footer

--- a/index.html
+++ b/index.html
@@ -199,10 +199,9 @@
       </section>
     </main>
 
-    
  
   <footer id="footer">
-    <a  id="footer-a-toTop" href="#body"><img src="images/round-arrow-top.png"></a>
+    <a class="to-top" href="#body"><img id="footer-a-toTop" src="images/round-arrow-top.png"></a>
       <div class="attributions">
         <p>Images borrowed from http://www.performancepilates.com.au/</p>
         <p>This is a fictional site for educational purposes&nbsp;only</p>
