refactoring: adding alt description to icons to improve accessibility score

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&family=Patrick+Hand&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,8 +25,8 @@
       <button id="button" class="ball" onclick="changeColor();"></button>
 
       <div class="social">
-        <a href="#"> <img id="social1" src="images/facebook_icon.png" /></a>
-        <a href="#"><img id="social2" src="images/youtube_icon.png" /></a>
+        <a href="#"> <img id="social1" alt="facebook icon" src="images/facebook_icon.png" /></a>
+        <a href="#"><img id="social2" alt="youtube icon" src="images/youtube_icon.png" /></a>
       </div>
     </header>
     <div id="about"></div>
@@ -141,7 +140,7 @@
 
  
   <footer id="footer">
-    <a class="to-top" href="#body"><img id="footer-a-toTop" src="images/round-arrow-top.png"></a>
+    <a class="to-top" href="#body"><img id="footer-a-toTop" alt="go to top arrow" src="images/round-arrow-top.png"></a>
       <div class="attributions">
         <p>Images borrowed from http://www.performancepilates.com.au/</p>
         <p>This is a fictional site for educational purposes&nbsp;only</p>
