added: area-label property to ball button to impove accessibility score

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a id="nav-li2" href="#contact">Contact</a></li>
       </ul>
 
-      <button id="button" class="ball" onclick="changeColor();"></button>
+      <button id="button" class="ball" aria-label="change color" onclick="changeColor();"></button>
 
       <div class="social">
         <a href="#"> <img id="social1" alt="facebook icon" src="images/facebook_icon.png" /></a>
