added: event listener to scroll to top button, not to affect page url

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
  
   <footer id="footer">
-    <a class="to-top" href="#body"><img id="footer-a-toTop" alt="go to top arrow" src="images/round-arrow-top.png"></a>
+    <img id="footer-a-toTop" onclick='window.scrollTo({top: 0, behavior: "smooth"});'  alt="go to top arrow" src="images/round-arrow-top.png">
       <div class="attributions">
         <p>Images borrowed from http://www.performancepilates.com.au/</p>
         <p>This is a fictional site for educational purposes&nbsp;only</p>
