--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div  class="about-me-text" >
             <h1 >I am Maria, a pilates instructor focusing on physical therapy through fitness in Athens, Greece</h1>
             <p>  After finishing my pilates certification, I spent the last decade deepening my understanding of the body, as well as the therapeutic effect of pilates on pain relief and injuries.</p>
-               <p>Being passionate about the field and the results on my clients physical strength, as well as overall wellbeing, I decided to further my studies by obtaining a Bachelor of Science degree in Physiotherapy from Queen Margaret's University of Scottland.  </p>
+               <p>Being passionate about the field and the results on my clients physical strength, as well as overall wellbeing, I decided to further my studies by obtaining a Bachelor of Science degree in Physiotherapy from Queen Margaret's University of Scotland.  </p>
             </p>
             <p>These days I teach personal sessions online and in person.</p> 
             <p>Group classes are also availabe at <a href="https://www.facebook.com/anandayogadance/" target=”_blank”>Ananda</a> studio in Nea Smyrni, and in <a href="https://www.facebook.com/Happy-body-112159400507950/" target="_bland">Happy&nbsp;Body</a> physiotherapy center in Piraeus.</p>
