optimized myPhoto in squoosh

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <div class="social">
         <a href="#"> <img id="social1" alt="facebook icon" src="images/facebook_icon.png" /></a>
-        <a href="#"><img id="social2" alt="youtube icon" src="images/youtube_icon_40x40.png" /></a>
+        <a href="#"><img id="social2" alt="youtube icon" src="images/youtube_icon.png" /></a>
       </div>
     </header>
     <div id="about"></div>
