--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="#"><img id="social2" alt="youtube icon" src="images/youtube_icon.png" /></a>
       </div>
     </header>
-    <div id="about"></div>
+    <div ></div>
     <main  >
       <section class="about-me">
         <div class="about-me-image">
@@ -42,7 +42,7 @@
 
         <div class="about-me-side" >
           <div  class="about-me-text" >
-            <h1 >I am Maria, a pilates instructor focusing on physical therapy through fitness in Athens, Greece</h1>
+            <h1 ><span id="about">I am Maria, a pilates instructor</span> focusing on physical therapy through fitness in Athens, Greece</h1>
             <p>  After finishing my pilates certification, I spent the last decade deepening my understanding of the body, as well as the therapeutic effect of pilates on pain relief and injuries.</p>
                <p>Being passionate about the field and the results on my clients physical strength, as well as overall wellbeing, I decided to further my studies by obtaining a Bachelor of Science degree in Physiotherapy from Queen Margaret's University of Scotland.  </p>
             </p>
@@ -89,7 +89,7 @@
           <div class="my-video-item">
             <iframe 
               src="https://www.youtube.com/embed/aZNVjBajf0g?mute=1"
-              title="YouTube video player"
+              title="YouTube video player for Beginner Pilates Flow"
               frameborder="0"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
@@ -104,7 +104,7 @@
           <div class="my-video-item">
             <iframe
               src="https://www.youtube.com/embed/g_tea8ZNk5A?mute=1"
-              title="YouTube video player"
+              title="YouTube video player for Daily stretch"
               frameborder="0"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
@@ -116,7 +116,7 @@
           <div class="my-video-item">
             <iframe
               src="https://www.youtube.com/embed/uOXCDNi2520?mute=1"
-              title="YouTube video player"
+              title="YouTube video player for Pilater for Lower Back Pain"
               frameborder="0"
               allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
