added: passive flag (passive:true) to event listener for better performance and speed

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
  
   <footer id="footer">
-    <img id="footer-a-toTop" onclick='window.scrollTo({top: 0, behavior: "smooth"});'  alt="go to top arrow" src="images/round-arrow-top.png">
+    <img id="footer-a-toTop" onclick='window.scrollTo({top: 0, behavior: "smooth", passive: true});'  alt="go to top arrow" src="images/round-arrow-top.png">
     <p>Created by <a id="footer-a"  href="mailto:anitawebdesigns@gmail.com">Anita Angelidou</a></p> 
       <div class="attributions">
         
